{
    "name": "PlayerAction",
    "maps": [
        {
            "name": "PlayerControl",
            "id": "6dd2252e-6e3c-49f2-bde3-f80d23774339",
            "actions": [
                {
                    "name": "PlayerMovement",
                    "type": "Value",
                    "id": "dfdf3744-16db-4f60-b6b5-186e4a550ac2",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "DashStart",
                    "type": "Button",
                    "id": "cc5d65bf-ef5d-48ef-9f98-e4b3cd09747b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "DashRelease",
                    "type": "Button",
                    "id": "8556b942-e4ac-4695-b6c9-8d1c2c014cfd",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=1)",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "WASD Keys",
                    "id": "43140559-04d7-4b9f-af78-a63b4de209ad",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerMovement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "07e758bf-1a71-41c3-bba8-a1cf3b637fee",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "45819bfb-94ef-4297-99ff-0ec90e0a087c",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "9edcba80-ec6a-4090-8c0c-62c2774abe6e",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "5bdb3052-0d8e-414e-9aed-fddba0fca7b4",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "0300cf0d-a062-4cf8-8f72-b7fae3e1ba43",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DashRelease",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7e692a5d-65c3-4b31-b37a-12124b243f29",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DashStart",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}